--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="appsandmaps.temple.edu.content_provider.home">
+    tools:context="appsandmaps.temple.edu.content_provider.home"
+    >
 
 
     <Button
@@ -20,7 +21,7 @@
         android:layout_height="250dp"
         android:id="@+id/imageView"
         android:src="@drawable/jeff_avatar"
-        android:layout_above="@+id/textView2"
+        android:layout_below="@+id/button2"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -28,16 +29,16 @@
         android:layout_height="wrap_content"
         android:text="Experience"
         android:id="@+id/textView2"
+        android:layout_marginEnd="25dp"
         android:layout_above="@+id/fragmentExp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="36dp" />
+        android:layout_alignEnd="@+id/fragmentExp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Level"
         android:id="@+id/textView3"
-        android:layout_above="@+id/fragmentExp"
+        android:layout_above="@+id/fragmenLevel"
         android:layout_alignStart="@+id/button2" />
 
 
@@ -45,13 +46,13 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:id="@+id/fragmenLevel"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_below="@+id/textView3" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/imageView" />
 
     <FrameLayout
-    android:layout_width="125dp"
-    android:layout_height="125dp"
-    android:id="@+id/fragmentExp"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:id="@+id/fragmentExp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
