--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="appsandmaps.temple.edu.content_provider.home"
-    >
+    android:id="@+id/i">
 
 
     <Button
@@ -55,5 +55,14 @@
         android:id="@+id/fragmentExp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txtStepCount"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_alignStart="@+id/textView2"
+        android:hint="Step Count #"/>
 
 </RelativeLayout>
