--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:text="NICK&apos;s Part"
         android:id="@+id/button2"
-        android:layout_alignEnd="@+id/imageView" />
+        android:layout_alignEnd="@+id/imageView"
+        android:visibility="invisible" />
 
     <ImageView
         android:layout_width="wrap_content"
