--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,126 +9,51 @@
 
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SELF"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="2"
-        android:id="@+id/etExp"
-        android:hint="#"
-        android:layout_below="@+id/textView5"
-        android:layout_toLeftOf="@+id/textView5"
-        android:layout_toStartOf="@+id/textView5"
-        android:layout_marginTop="26dp" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go"
-        android:id="@+id/btnExp"
-        android:layout_alignBottom="@+id/etExp"
-        android:layout_toRightOf="@+id/etExp"
-        android:layout_toEndOf="@+id/etExp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="2"
-        android:id="@+id/etLevel"
-        android:hint="#"
-        android:layout_alignBottom="@+id/btnExp"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go"
-        android:id="@+id/btnLevel"
-        android:layout_alignBottom="@+id/etLevel"
-        android:layout_toRightOf="@+id/etLevel"
-        android:layout_toEndOf="@+id/etLevel" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="250dp"
         android:id="@+id/imageView"
         android:src="@drawable/jeff_avatar"
-        android:layout_below="@+id/btnExp"
-        android:layout_centerHorizontal="true" />
-
-
-    <FrameLayout
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:id="@+id/fragmenLevel"
-        android:layout_alignTop="@+id/fragmentExp"
-        android:layout_alignRight="@+id/btnLevel"
-        android:layout_alignEnd="@+id/btnLevel" />
-
-    <FrameLayout
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:id="@+id/fragmentExp"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView"/>
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Experience"
         android:id="@+id/textView2"
-        android:layout_above="@+id/fragmentExp"
-        android:layout_alignLeft="@+id/fragmentExp"
-        android:layout_alignStart="@+id/fragmentExp" />
+        android:layout_alignBaseline="@+id/textView3"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Level"
         android:id="@+id/textView3"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignRight="@+id/fragmenLevel"
+        android:layout_above="@+id/fragmenLevel"
         android:layout_alignEnd="@+id/fragmenLevel" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter Values"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+
+    <FrameLayout
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:id="@+id/fragmenLevel"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/imageView" />
+
+    <FrameLayout
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:id="@+id/fragmentExp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="For Exp"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/textView4"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="For Level"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView4"
-        android:layout_toLeftOf="@+id/textView3"
-        android:layout_toStartOf="@+id/textView3" />
-
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txtStepCount"
+        android:layout_alignStart="@+id/textView2"
+        android:hint="Step Count #"/>
 </RelativeLayout>
